// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter matches the initial snapshot 1`] = `
<div>
  <p>
    count: 
    0
  </p>
  <button
    className="add1"
    onClick={[Function]}
  />
</div>
`;

exports[`Counter matches the initial snapshot 2`] = `
<div>
  <p>
    count: 
    2
  </p>
  <button
    className="add1"
    onClick={[Function]}
  />
  <h1>
    Foo
  </h1>
  <h1>
    Foo
  </h1>
</div>
`;
